# KatieBot

./: .gitignore  README.md  apirequests.cpp  fullchart.cpp  fullchart.hpp  katieLive.pro  mainwindow.cpp  mainwindow.hpp  pushbullet.cpp  pushbullet.hpp  trading.cpp
libraries/jsoncpp-1.8.3/: CMakeLists.txt
libraries/libbinacpp/include/: binacpp_utils.h
